2006-02-25	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_button_release_event): Allow multi
	  selection using Shift/Control in single click mode. Bug #1500.

2006-02-24	Benedikt Meurer <benny@xfce.org>

	* docs/manual/, Makefile.am, configure.in.in, docs/Makefile.am,
	  exo-helper/exo-helper-chooser-dialog.c,
	  exo-helper/exo-helper-launcher-dialog.c: Add initial user manual for
	  the preferred applications framework, and connect the "Help" buttons
	  to display the manual. Bug #1403.
	* docs/reference/exo-open.xml, docs/reference/Makefile.am: Add initial
	  manpage for exo-open.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.

2006-02-24	Benedikt Meurer <benny@xfce.org>

	* exo/exo-private.{c,h}: Add helper function required for the
	  interactive search, _exo_gtk_widget_send_focus_change().
	* exo/exo-icon-view.{c,h}, exo/exo.symbols: Add interactive search
	  capabilities to ExoIconView. Bug #1358.
	* docs/reference/: Update the API documentation.
	* exo-helper/exo-helper-chooser-dialog.c
	  (exo_helper_chooser_dialog_key_press_event): Close the chooser dialog
	  on <control>W, so we are consistent with other applications.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.
	* po/de.po: Further updates on the german translations.

2006-02-24	Benedikt Meurer <benny@xfce.org>

	* autogen.sh: Be sure to run svn info with LC_ALL=C.

2006-02-23	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.{c,h}: Mark the "text-column", "markup-column" and
	  "pixbuf-column" properties - their accessor methods - as deprecated,
	  noting that developers should use the more powerful GtkCellRenderer's
	  instead.
	* exo/exo-icon-view.{c,h}, exo/exo.symbols: Add "single-click" property
	  to ExoIconView. Bug #1411.
	* docs/reference/: Update the API documentation.
	* exo/exo-url.c: Spawn Thunar asynchronously, as it will not exit if
	  no running instance is found. We can be sure that Thunar will handle
	  the file if found.