@@ -1,3 +1,8 @@
+2006-02-26	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c: Automatically select prelited items after a
+	  certain amount of time in single-click mode.
+
 2006-02-25	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(exo_icon_view_button_release_event): Allow multi
